# octoconf

./: .dcignore  .gitignore  .gitlab-ci.yml  .gitmodules  .gitmoji-changelogrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  octoreconf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.bat  setup.py  setup.sh  tox.ini  update_gitmodules_url_for_github.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: snyk.yml  tests.yml  unittest.yml
.gitlab/issue_templates/: bug_report.md  feature_request.md
adapters/: __init__.py  archive.py  checker.py  checklist.py
adapters/script_generator/: __init__.py  language_factory.py  linux_bash_script.py  macos_bash_script.py  windows_batch_script.py  windows_powershell_script.py
components/: __init__.py
components/json_encoders/: __init__.py  check.py  check_result.py  checklist.py  checkpoint.py  checkresult.py
components/report_generators/: __init__.py  report_generator.py  xlsx_report_generator.py
config/: const.py  constants.py
console/: cli.py
decorators/: __init__.py  bash_decorator.py  bash_decorator_mac.py  batch_decorator.py  check_decorator.py  decorator.py  powershell_decorator.py
decorators/script_generator/: __init__.py  bash_decorator.py  bash_decorator_mac.py  batch_decorator.py  powershell_decorator.py
doc/: title.txt
doc/0x1-Introduction/: 0x1-Table_of_contents.md  0x2-License.md
doc/figures/: diagrams.drawio
docs/: analyze-report.md  arround-octoconf.md  baselines.md  configuration.md  install.md  title.txt
interactors/: __init__.py  check_archive.py  check_output.py  checks_runner.py  collection_script_retrieval.py  report_generator.py
models/: __init__.py  category.py  check.py  checkpoint.py
octoconf/: __init__.py
octoreconf/: __init__.py
ports/: __init__.py  archive.py  checker.py  checklist.py  output_parser.py
scripts/: update_changelog.sh
template/: Template-checklist-20210801.hjson  checklist.hjson
utils/: __init__.py  const.py  debug.py  global_values.py  locale.py  timestamp.py  utils.py
(+293 files in other folders)
